# ragbox-core

./: .gitignore  BENCHMARKS.md  COMPARISON.md  CONTRIBUTING.md  Dockerfile  LAUNCH_POSTS.md  README.md  docker-compose.yml  pyproject.toml  test_script.py
.github/workflows/: ci.yml  publish.yml
.ragbox_state/graph_cache/: 0715786d60bd144b4a87b3e384ec66c4aa244075ee29374268091a14e0aeaca7_0f53c5832b5c8f2ba2770a2225e21ee1.json  29a8dbf7e45e3a6ba60825946b1ea338aa4994d395282c32455086662e58c27f_729567169964afb18889e34165622d76.json  2c9afe6e4c85b0b8da23fff0b7350312c94183d3ad21bbfdf359819cf2007ec1_2ddf5aaee31dde9e7466ca450c760d4a.json  4377e9f396a43f6e322cda1a0c4870367b70cdd054fab1d2edac380879efd829_e4331a995a4bd7c8dbaaa0139636caf1.json  a71277caeb84e22fe87e02cf0c5c72fc63ee9509ebea09f7a27495c37ddd07cd_3c3a894a5a7e0a5d1b5dc61357f495d9.json  c74f2ca1591c5e92a77d8986133c2f3dfe29aa179b9d145b05045bd41114bfff_559ca4bc4195c1505dea24a88042cad9.json  f1018de46b7d7aead3e975f84ddd5ef37bc8ff51393f2d7110b7b5cc7ee38f98_f4074ff9d48203b3b584f512e9e85d9a.json  f93b810e2559c7aa9fb16be5ed0dee6ca484994127defe723349d3c3a6148294_5925d4de67a880fcaa2d4d018f6bfb0a.json
benchmarks/: run_benchmark.py
docs/: index.html  script.js  styles.css
examples/: 01_basic.py  02_streaming.py  03_graphrag.py  04_cost_estimate.py  05_codebase_rag.py
ragbox/: __init__.py  cli.py  server.py
ragbox/config/: __init__.py  defaults.py
ragbox/core/: __init__.py  agentic_orchestrator.py  chunking_engine.py  document_processor.py  knowledge_graph.py  reranker.py  retrieval_fusion.py  self_healing.py
ragbox/models/: __init__.py  chunks.py  documents.py  graph.py  queries.py
ragbox/utils/: cost_tracker.py  embeddings.py  llm_clients.py  vector_stores.py
test_docs/: policy.txt
tests/: test_ragbox.py
