[tool.poetry]
name = "ragbox-core"
version = "2.0.0"
description = "RAG in 3 lines. Auto-GraphRAG, auto-reranking, auto-streaming. No LangChain required."
authors = ["Developer <amankumarpandeyin@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ixchio/ragbox-core"
documentation = "https://ixchio.github.io/ragbox-core/"
homepage = "https://pypi.org/project/ragbox-core/"
keywords = ["rag", "llm", "ai", "vector-search", "knowledge-graph", "graphrag", "langchain-alternative", "llamaindex-alternative", "retrieval-augmented-generation", "minimal-rag"]
packages = [{include = "ragbox"}]
exclude = ["tests/", "docs/", "benchmarks/", ".env", "*.db", "chroma_db/", "knowledge_graph/", "logs/"]

[tool.poetry.scripts]
ragbox = "ragbox.cli:app"

[tool.poetry.dependencies]
python = "^3.11"
# Core — always installed (~80MB)
pydantic = "^2.0"
pydantic-settings = "^2.13.1"
aiofiles = "^23.0"
watchdog = "^3.0"
chromadb = "^0.4"
networkx = "^3.0"
sentence-transformers = "*"
rank-bm25 = "*"
numpy = "^1.24"
scipy = "^1.11"
loguru = "^0.7"
typer = "^0.9"
rich = "^13.0"
python-dotenv = "*"
tenacity = "*"
tiktoken = "*"
pypdf = "*"
pdfplumber = "*"
python-pptx = "*"
leidenalg = "*"
python-louvain = "*"
igraph = "*"
# Cloud LLM clients — lightweight, always available
openai = "*"
anthropic = "*"
groq = "*"

# Optional heavy dependencies
paddleocr = {version = "*", optional = true}
llama-cpp-python = {version = "*", optional = true}
camelot-py = {version = "*", optional = true}
tree-sitter = {version = "*", optional = true}
tree-sitter-python = {version = "*", optional = true}
python-magic = {version = "*", optional = true}
neo4j = {version = "^5.0", optional = true}
scikit-learn = {version = "^1.3", optional = true}
fastapi = {version = ">=0.100", optional = true}
uvicorn = {version = ">=0.20", optional = true}

[tool.poetry.extras]
ocr = ["paddleocr"]
local = ["llama-cpp-python"]
code = ["tree-sitter", "tree-sitter-python"]
server = ["fastapi", "uvicorn"]
neo4j = ["neo4j"]
advanced = ["scikit-learn", "camelot-py", "python-magic"]
all = ["paddleocr", "llama-cpp-python", "tree-sitter", "tree-sitter-python", "camelot-py", "python-magic", "neo4j", "scikit-learn", "fastapi", "uvicorn"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
mypy = "^1.5.0"
black = "^23.7.0"
ruff = "^0.0.285"

[tool.poetry.group.benchmark.dependencies]
ragas = "*"
datasets = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
